# kafka-msk-hs-poc

./: .dockerignore  .envrc  .envrc.dev  .gitignore  Dockerfile  README.md  cabal.project  kafka-aws-haskell.cabal  start.sh
nix/modules/flake/: devshell.nix  haskell.nix
src/: Config.hs  Main.hs
src/AWS/: Auth.hs
src/Kafka/: MSK.hs
