cabal-version:      2.4
name:               kafka-aws-haskell
version:            0.1.0.0
license:            MIT
copyright:          2022 Abhishek Singh
maintainer:         srid@srid.ca
author:             Abhishek Singh
category:           Web
homepage:           https://srid.ca/kafka-aws-haskell
synopsis:           Simple Kafka consumer POC using kafka-proxy
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  default-extensions:
    DerivingStrategies
    LambdaCase
    OverloadedStrings
    RecordWildCards

  build-depends:
    , base             >=4   && <5
    , hw-kafka-client
    , relude           >=1.0
    , text
    , with-utf8

  hs-source-dirs:     src
  default-language:   GHC2021

executable kafka-aws-haskell
  import:        shared
  main-is:       Main.hs
  other-modules:
    Config
    Kafka.MSK
